# suokif-compiler

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py
src/suokif_compiler/: __init__.py  __main__.py  ast.py  core.py  symbol_table.py
test/: test_core.py
