[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "suokif-compiler"
version = "0.1.0"
description = "A compiler for the SUO-KIF knowledge interchange format."
readme = "README.md"
authors = [
  { name = "Theodore Kim", email = "kim.theodore.j@gmail.com" },
]
# license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    # Add runtime dependencies here, e.g., "requests>=2.0"
]

[project.urls]
"Homepage" = "https://github.com/theo-kim/suokif-compiler"
"Bug Tracker" = "https://github.com/theo-kim/suokif-compiler/issues"

[project.scripts]
suokif-compiler = "suokif_compiler.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]